<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inizio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/titleBarColor"
    tools:context=".view.tutorial.WelcomeFragment">

    <!-- TODO: Update blank fragment layout -->


    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="205dp"
        android:layout_height="208dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/appIconDescription"
        android:src="@mipmap/appicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tutorialText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/welcome1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tutorialAppTitle" />

    <TextView
        android:id="@+id/tutorialText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/welcome2"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tutorialText1" />

    <TextView
        android:id="@+id/tutorialText3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/welcome3"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnStartTutorial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tutorialText2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tutorialAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogo" />

    <Button
        android:id="@+id/btnStartTutorial"
        android:layout_width="173dp"
        android:layout_height="54dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/tour"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnSkipTutorial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSkipTutorial"
        android:layout_width="173dp"
        android:layout_height="54dp"
        android:layout_marginBottom="72dp"
        android:backgroundTint="@color/white"
        android:text="@string/skip"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>