<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.skimap.AboutUsActivity"
    android:background="@color/activityBGColor">

    <TextView
        android:id="@+id/devTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="348dp"
        android:text="@string/developers"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/appLogoImage"
        android:layout_width="158dp"
        android:layout_height="188dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="52dp"
        android:contentDescription="@string/logo_image_description"
        app:layout_constraintBottom_toTopOf="@+id/devTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/appicon" />

    <ImageView
        android:id="@+id/univpmLogoImage"
        android:layout_width="221dp"
        android:layout_height="253dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/univpm_image_description"
        app:layout_constraintBottom_toTopOf="@+id/devTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="@+id/appLogoImage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/univpm" />

    <TextView
        android:id="@+id/allRightsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="123dp"
        android:text="@string/copyright"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/devTextView" />

    <TextView
        android:id="@+id/git"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="260dp"
        android:text="@string/repo"
        android:textColor="@color/link"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/univpmLogoImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>