<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/guida3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/titleBarColor"
    tools:context=".view.tutorial.Guida3Fragment">


    <TextView
        android:id="@+id/thirdTutorialText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="43dp"
        android:text="@string/guide3"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/thirdTutorialBtnBack"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="@color/white"
        android:text="@string/back"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/thirdTutorialStartBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/thirdTutorialStartBtn"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="@color/white"
        android:text="@string/start"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/thirdTutorialBtnBack" />

    <ImageView
        android:id="@+id/thirdTutorialImg2"
        android:layout_width="67dp"
        android:layout_height="326dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/guida3Image2Description"
        android:src="@drawable/gradient"
        app:layout_constraintBottom_toTopOf="@+id/thirdTutorialStartBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thirdTutorialText" />

    <ImageView
        android:id="@+id/thirdTutorialImg1"
        android:layout_width="189dp"
        android:layout_height="0dp"
        android:layout_marginStart="52dp"
        android:contentDescription="@string/guida3Image1Description"
        android:src="@drawable/stato_piste"
        app:layout_constraintBottom_toTopOf="@+id/thirdTutorialBtnBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thirdTutorialText" />

</androidx.constraintlayout.widget.ConstraintLayout>