<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/guida1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/titleBarColor"
    tools:context=".view.tutorial.Guida1Fragment">


    <TextView
        android:id="@+id/firstTutorialText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/guide1"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/firstTutorialBackBtn"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="@color/white"
        android:text="@string/back"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/firstTutorialNextBtn"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="@color/white"
        android:text="@string/next"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.901"
        app:layout_constraintStart_toEndOf="@+id/firstTutorialBackBtn" />

    <ImageView
        android:id="@+id/firstTutorialImg"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:contentDescription="@string/guida1ImageDescription"
        android:src="@drawable/tutorial1"
        app:layout_constraintBottom_toTopOf="@+id/firstTutorialBackBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstTutorialText"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>